feat: rename plugin to network_settings_listener and update related files

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,7 @@ apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
 
 android {
-    namespace = "dev.Prince2347X.connectivity_listener"
+    namespace = "dev.Prince2347X.network_settings_listener"
 
     compileSdk = 35
 
